fix: remove extra margin

--- a/packages/veui-theme-one/components/steps.less
+++ b/packages/veui-theme-one/components/steps.less
@@ -43,7 +43,7 @@
       padding-left: @step-height + 10px;
     }
 
-    &:last-child &-content {
+    &:last-child {
       margin-right: 0;
     }
 
